Fix size of the card to fit screen on smaller tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,7 +438,7 @@ Full link is in readme file.
     }
 
     .card {
-        width: 14%;
+        width: 12%;
     }
 
     .chip {
